# fullstack-triage-agent-mcp

agentcore_runtime/mcp1/app/Cal/: README.md
agentcore_runtime/mcp2/agentcore/.cli/: deployed-state.json
agentcore_runtime/mcp2/app/Weather/: main.py  pyproject.toml
agentcore_runtime/mcp3/: TROUBLESHOOTING.md
agentcore_runtime/mcp3/app/TaskManager/: README.md  SECURITY.md  main.py  pyproject.toml  test_db.py
agentcore_runtime/mcp4/agentcore/: agentcore.json
backend/: agentcore_mcp_client.py  calendar_events.json  main.py  mcp.json  mcpmanager.py  requirements.txt  tasks.json  test_agentcore.py
backend/mcp_servers/: calculator_server.py  task_manager_server.py
backend/mcp_servers/calendar/: calendar_server.py
frontend/: package-lock.json  package.json
frontend/src/: App.js
frontend/src/components/: ChatInterface.js  ChatInterface.jsx  LeftSidebar.js
stuck/: AGENTCORE_MIGRATION.md  README.md
stuck/agentcore_runtime/mcp1/agentcore/: agentcore.json
stuck/agentcore_runtime/mcp1/agentcore/.cli/: deployed-state.json
stuck/agentcore_runtime/mcp2/agentcore/: agentcore.json
stuck/agentcore_runtime/mcp3/agentcore/: .env.local.example  agentcore.json
stuck/agentcore_runtime/mcp4/app/Task/: README.md  main.py  pyproject.toml
stuck/backend/: agentcore_mcp_client.py  calendar_events.json  database.py  main.py  pyproject.toml
stuck/backend/mcp_servers/email_history/: email_history_server.py
stuck/frontend/: craco.config.js
stuck/frontend/src/components/: ChatInterface.js  DecisionTreeVisualization.js  RightSidebar.js
(+8 files in other folders)
